fixed the formatting for the two different pages - home, and portfolio. fixed the generation of the info for projects to be rendered, but hidden by default, and shown when navigated to. formatting for all device sizes functional

--- a/css/modules.css
+++ b/css/modules.css
@@ -118,6 +118,11 @@ body .header {
     min-width: 65vw;
     max-width: 65vw;
   }
+  .main-intro-big{
+    float: left;
+    margin-top: 0;
+    width: 85vw;
+  }
   #slideshow-article {
     display: block;
     width: 85vw;
